# dept_tracker

./: .env.example  .gitignore  README.md
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/crates/api/src/: error.rs  lib.rs  middleware.rs  router.rs
backend/crates/api/src/routes/: auth.rs  dashboard.rs  loans.rs  mod.rs  payments.rs  sonderzahlungen.rs
backend/crates/api/tests/: auto_payments_test.rs  contract_dashboard.rs  dashboard_test.rs  export_import_test.rs  loan_detail_test.rs  loans_create_test.rs  loans_manage_test.rs  payment_calculations_test.rs  sonderzahlungen_test.rs
backend/crates/api/tests/common/: mod.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: auth.rs  export.rs  import.rs  lib.rs  loans.rs  loans_create.rs  migrate.rs  payment_events.rs  test_support.rs
backend/crates/domain/src/: amortization.rs  dashboard.rs  due_payments.rs  interest.rs  lib.rs  payment_split.rs  payoff_timeline.rs  projection.rs  types.rs  validation.rs
backend/crates/domain/tests/: interest_summary.rs  payment_calculations.rs  sonderzahlung_projection.rs
backend/migrations/: 002_tilgung_auth.sql  003_first_payment_date.sql
docker/: Dockerfile  compose.yml
frontend/: index.html  playwright.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/components/: AddLoanModal.svelte  AmortizationTable.svelte  AuthScreen.svelte  EditLoanModal.svelte  HouseholdSummary.svelte  InsightsBanner.svelte  InterestSummary.svelte  LanguageSwitcher.svelte  LoanBalanceChart.svelte  LoanCard.svelte  (+8 more)
frontend/test-results/: .last-run.json
(+20 files in other folders)
