[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
tempfile = "3"

[dev-dependencies]
